genctl-ci/calico/deny-policies/deny-all-private-default.yaml
# Denies all other ingress to and egress from worker nodes on the private network.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: deny-all-private-default
spec:
  egress:
  - action: Deny
    destination: {}
    source: {}
  ingress:
  - action: Deny
    destination: {}
    source: {}
  order: 99900
  selector: ibm.role == 'worker_private'
  types:
  - Egress
  - Ingress
